@@ -1,5 +1,6 @@
 /*
-* Copyright 2004 - 2008 Christian Sprajc. All rights reserved.
+* Copyright 2004 - 2024 Christian Sprajc. All rights reserved.
+* Copyright 2024 - 2026 EINBERG UG (haftungsbeschränkt). All rights reserved.
 *
 * This file is part of PowerFolder.
 *
@@ -15,7 +16,6 @@
 * You should have received a copy of the GNU General Public License
 * along with PowerFolder. If not, see <http://www.gnu.org/licenses/>.
 *
-* $Id: AddLicenseHeader.java 4282 2008-06-16 03:25:09Z tot $
 */
 package de.dal33t.powerfolder.message;
 
@@ -114,7 +114,7 @@ public class SerializationCompareTest extends TestCase {
         f.folderInfo = UUID.randomUUID().toString();
         f.modifiedBy = UUID.randomUUID().toString();
         f.lastModifiedDate = new Date();
-        f.size = new Long((long) (Math.random() * 1000000));
+        f.size = Long.valueOf((long) (Math.random() * 1000000));
         f.version = (int) (Math.random() * 100);
         return f;
     }
@@ -127,7 +127,7 @@ public class SerializationCompareTest extends TestCase {
         f.folderInfo = UUID.randomUUID().toString();
         f.modifiedBy = UUID.randomUUID().toString();
         f.lastModifiedDate = new Date();
-        f.size = new Long((long) (Math.random() * 1000000));
+        f.size = Long.valueOf((long) (Math.random() * 1000000));
         f.version = (int) (Math.random() * 100);
         return f;
     }
